# lambdai

./: .gitignore  README  README.md  ROADMAP  lambdai.cabal  stack.yaml
app/: Main.hs
src/: Interpreter.hs  LambdaAST.hs  Main.hs  Parser.hs  PragmaParser.hs  Reducer.hs
src/LambdaAST/: Path.hs
src/Reducer/: DefinitionTable.hs  Renderer.hs  Step.hs
webapp/: Interpreter.hs  Main.hs
webapp/templates/: 404.hamlet  405.hamlet  error.hamlet  index.hamlet  main.css  success.hamlet
