name:                lambdai
version:             0.1.0.0
synopsis:            An interpreter for lambda calculus.
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Cyrill Schenkel
maintainer:          cyrill.schenkel@gmail.com
-- copyright:           
category:            Educational
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable lambdai
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       containers >= 0.5.6.2,
                       parsec >= 3.1.11
  hs-source-dirs:      src
  default-language:    Haskell2010
