name:                lambdai
version:             1.0.0.1
synopsis:            An interpreter for lambda calculus.
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Cyrill Schenkel
maintainer:          cyrill.schenkel@gmail.com
-- copyright:
category:            Educational
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Parser,
                       PragmaParser,
                       Reducer,
                       Reducer.Renderer,
                       Reducer.Step,
                       Reducer.DefinitionTable,
                       LambdaAST,
                       LambdaAST.Path
  build-depends:       base >= 4.8,
                       containers >= 0.5.6.2,
                       parsec >= 3.1.11
  hs-source-dirs:      src

executable lambdai
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       lambdai
  hs-source-dirs:      app
  default-language:    Haskell2010
