name:                lambdai
version:             1.0.0.1
synopsis:            An interpreter for lambda calculus.
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Cyrill Schenkel
maintainer:          cyrill.schenkel@gmail.com
-- copyright:
category:            Educational
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Parser
                       PragmaParser
                       Reducer
                       Reducer.Renderer
                       Reducer.Step
                       Reducer.DefinitionTable
                       LambdaAST
                       LambdaAST.Path
  build-depends:       base >= 4.8,
                       containers >= 0.5.6.2,
                       parsec >= 3.1.11
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lambdai
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       lambdai
  hs-source-dirs:      app
  default-language:    Haskell2010

executable lambdaid
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       lambdai,
                       warp >= 3.2.9,
                       wai >= 3.2.1.1,
                       wai-extra >= 3.0.19,
                       http-types >= 0.9.1,
                       blaze-builder >= 0.4.0.2,
                       utf8-string >= 1.0.1.1,
                       shakespeare >= 2.0.11.2,
                       blaze-markup >= 0.7.1.0,
                       blaze-html >= 0.8.1.3,
                       text >= 1.2.2.1,
                       bytestring >= 0.10.8.1,
                       file-embed >= 0.0.10
  hs-source-dirs:      webapp
  default-language:    Haskell2010
